tests/chapter_18/invalid_struct_tags/member_type_undeclared.c
struct s {
    // can't declare struct member with undeclared/incomplete struct type
    struct a b;
};